# derech

./: .gitignore  ABI.md  CHANGELOG.md  CMakeLists.txt  INSTALL.md  README.md  RELEASING.md
.github/workflows/: ci.yml  nightly-fuzz.yml  release.yml
bench/: bench.c
cmake/: CheckExports.cmake  CheckReleaseVersion.cmake  CheckSharedIdentity.cmake  VerifyInstall.cmake.in  WriteChecksum.cmake  WriteReleaseManifest.cmake  derech.exports  derech.pc.in  derechConfig.cmake.in  derech_version.h.in
cmake/tests/consumer/: CMakeLists.txt  consumer.c  consumer.cpp
demo/: village.c  woodcutters.c
fuzz/: fuzz_derech.c
include/: derech.h
src/: alloc.c  batch.c  derech_internal.h  derech_thread.h  field.c  map.c  pool.c  profile.c  search.c
tests/: support.c  support.h  test_abi.c  test_batch.c  test_concurrency.c  test_extreme.c  test_field.c  test_goalset.c  test_map.c  test_oom.c  test_profile.c  test_property.c  test_resource.c  test_search.c
