cmake_minimum_required(VERSION 3.16)

project(derech
	VERSION 0.4.0
	DESCRIPTION "Batch pathfinding over weighted tile grids"
	LANGUAGES C)

option(DERECH_BUILD_TESTS "Build the derech test suite" ON)
option(DERECH_BUILD_BENCH "Build the benchmark / counter-gate binary" OFF)
option(DERECH_FUZZ "Build the libFuzzer harness (requires Clang)" OFF)
option(DERECH_WERROR "Treat warnings as errors" OFF)
option(DERECH_SANITIZE "Build with AddressSanitizer + UBSanitizer" OFF)
option(DERECH_TSAN "Build with ThreadSanitizer" OFF)

if(DERECH_SANITIZE AND DERECH_TSAN)
	message(FATAL_ERROR "DERECH_SANITIZE and DERECH_TSAN are mutually exclusive")
endif()
if(DERECH_FUZZ AND NOT CMAKE_C_COMPILER_ID MATCHES "Clang")
	message(FATAL_ERROR "DERECH_FUZZ requires Clang (libFuzzer)")
endif()

set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

add_library(derech
	src/map.c
	src/profile.c
	src/search.c
	src/batch.c
	src/pool.c
	src/field.c)

if(NOT WIN32)
	set(THREADS_PREFER_PTHREAD_FLAG ON)
	find_package(Threads REQUIRED)
	target_link_libraries(derech PUBLIC Threads::Threads)
endif()

target_include_directories(derech PUBLIC
	$<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/include>
	$<INSTALL_INTERFACE:include>)

set_target_properties(derech PROPERTIES
	C_STANDARD 17
	C_STANDARD_REQUIRED ON
	C_EXTENSIONS OFF
	C_VISIBILITY_PRESET hidden)

target_compile_definitions(derech PRIVATE DERECH_BUILD)
if(NOT BUILD_SHARED_LIBS)
	target_compile_definitions(derech PUBLIC DERECH_STATIC)
endif()

if(MSVC)
	set(DERECH_C_WARNINGS /W4)
	if(DERECH_WERROR)
		list(APPEND DERECH_C_WARNINGS /WX)
	endif()
else()
	set(DERECH_C_WARNINGS -Wall -Wextra -Wshadow -Wvla)
	if(DERECH_WERROR)
		list(APPEND DERECH_C_WARNINGS -Werror)
	endif()
endif()
target_compile_options(derech PRIVATE ${DERECH_C_WARNINGS})

if(DERECH_SANITIZE)
	if(MSVC)
		message(FATAL_ERROR "DERECH_SANITIZE is not supported with MSVC")
	endif()
	target_compile_options(derech PUBLIC
		-fsanitize=address,undefined -fno-sanitize-recover=all)
	target_link_options(derech PUBLIC -fsanitize=address,undefined)
endif()

if(DERECH_TSAN)
	if(MSVC)
		message(FATAL_ERROR "DERECH_TSAN is not supported with MSVC")
	endif()
	target_compile_options(derech PUBLIC -fsanitize=thread)
	target_link_options(derech PUBLIC -fsanitize=thread)
endif()

include(GNUInstallDirs)
install(TARGETS derech
	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR})
install(FILES include/derech.h DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})

if(DERECH_BUILD_TESTS)
	enable_testing()

	add_library(derech_test_support STATIC
		tests/support.c)
	target_link_libraries(derech_test_support PUBLIC derech)
	target_include_directories(derech_test_support PUBLIC tests src)
	set_target_properties(derech_test_support PROPERTIES
		C_STANDARD 17 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
	target_compile_options(derech_test_support PRIVATE ${DERECH_C_WARNINGS})

	foreach(t map profile search batch field goalset property)
		add_executable(test_${t} tests/test_${t}.c)
		target_link_libraries(test_${t} PRIVATE derech_test_support)
		set_target_properties(test_${t} PROPERTIES
			C_STANDARD 17 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
		target_compile_options(test_${t} PRIVATE ${DERECH_C_WARNINGS})
		add_test(NAME ${t} COMMAND test_${t})
	endforeach()
endif()

if(DERECH_BUILD_BENCH)
	enable_testing()
	add_executable(derech_bench bench/bench.c)
	target_link_libraries(derech_bench PRIVATE derech)
	set_target_properties(derech_bench PROPERTIES
		C_STANDARD 17 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
	target_compile_options(derech_bench PRIVATE ${DERECH_C_WARNINGS})
	add_test(NAME bench_counters COMMAND derech_bench --check)
endif()

option(DERECH_BUILD_DEMO "Build the notcurses demos" OFF)
if(DERECH_BUILD_DEMO)
	find_package(PkgConfig QUIET)
	if(PKG_CONFIG_FOUND)
		pkg_check_modules(NOTCURSES QUIET IMPORTED_TARGET notcurses-core)
	endif()
	if(NOT NOTCURSES_FOUND AND DERECH_NOTCURSES_INCLUDE AND DERECH_NOTCURSES_LIB)
		if(NOT EXISTS ${DERECH_NOTCURSES_INCLUDE}/notcurses/version.h)
			# version.h is generated by notcurses' own build; a
			# source checkout lacks it, so synthesize one
			file(WRITE ${CMAKE_BINARY_DIR}/nc-compat/notcurses/version.h
				"#define NOTCURSES_VERSION_MAJOR 3\n"
				"#define NOTCURSES_VERSION_MINOR 0\n"
				"#define NOTCURSES_VERSION_PATCH 17\n"
				"#define NOTCURSES_VERSION_TWEAK 0\n"
				"#define NOTCURSES_VERSION \"3.0.17\"\n")
		endif()
		find_library(DERECH_NOTCURSES_CORE_LIB notcurses-core
			PATHS ${DERECH_NOTCURSES_LIB} NO_DEFAULT_PATH)
		if(NOT DERECH_NOTCURSES_CORE_LIB)
			message(FATAL_ERROR "libnotcurses-core not found in ${DERECH_NOTCURSES_LIB}")
		endif()
		if(APPLE)
			# vendored dylibs use @loader_path install names; point
			# each executable's reference at the absolute location
			execute_process(COMMAND otool -D ${DERECH_NOTCURSES_CORE_LIB}
				OUTPUT_VARIABLE _nc_id_out)
			string(REGEX REPLACE ".*\n(.+)\n?$" "\\1" _nc_id "${_nc_id_out}")
			string(STRIP "${_nc_id}" _nc_id)
			get_filename_component(_nc_real ${DERECH_NOTCURSES_CORE_LIB} REALPATH)
		endif()
	elseif(NOT NOTCURSES_FOUND)
		message(FATAL_ERROR "notcurses not found: install it (pkg-config"
			" notcurses-core) or pass -DDERECH_NOTCURSES_INCLUDE=..."
			" -DDERECH_NOTCURSES_LIB=...")
	endif()

	foreach(demo village woodcutters)
		add_executable(derech_${demo} demo/${demo}.c)
		target_link_libraries(derech_${demo} PRIVATE derech)
		set_target_properties(derech_${demo} PROPERTIES
			C_STANDARD 17 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
		target_compile_options(derech_${demo} PRIVATE ${DERECH_C_WARNINGS})
		if(NOTCURSES_FOUND)
			target_link_libraries(derech_${demo} PRIVATE PkgConfig::NOTCURSES)
		else()
			target_include_directories(derech_${demo} PRIVATE
				${DERECH_NOTCURSES_INCLUDE})
			if(NOT EXISTS ${DERECH_NOTCURSES_INCLUDE}/notcurses/version.h)
				target_include_directories(derech_${demo} PRIVATE
					${CMAKE_BINARY_DIR}/nc-compat)
			endif()
			target_link_libraries(derech_${demo} PRIVATE
				${DERECH_NOTCURSES_CORE_LIB})
			if(APPLE)
				add_custom_command(TARGET derech_${demo} POST_BUILD
					COMMAND install_name_tool -change "${_nc_id}"
						"${_nc_real}" $<TARGET_FILE:derech_${demo}>)
			endif()
		endif()
	endforeach()
endif()

if(DERECH_FUZZ)
	add_executable(fuzz_derech fuzz/fuzz_derech.c)
	target_link_libraries(fuzz_derech PRIVATE derech)
	set_target_properties(fuzz_derech PROPERTIES
		C_STANDARD 17 C_STANDARD_REQUIRED ON C_EXTENSIONS OFF)
	target_compile_options(fuzz_derech PRIVATE
		${DERECH_C_WARNINGS} -fsanitize=fuzzer,address,undefined
		-fno-sanitize-recover=all)
	target_link_options(fuzz_derech PRIVATE
		-fsanitize=fuzzer,address,undefined)
	# the library itself needs matching instrumentation
	target_compile_options(derech PUBLIC
		-fsanitize=fuzzer-no-link,address,undefined
		-fno-sanitize-recover=all)
	target_link_options(derech PUBLIC
		-fsanitize=address,undefined)
endif()
